apache-airflow-yamls/airflowdb-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: airflow-init-pod
  namespace: dev-sf-deploy-test
  labels:
    io.kompose.service: webserver
    name: webserver
spec:
  containers:
    - name: webserver
      image: docker.io/thescomcontainers/airflow:1.0.0
      command: ["sh", "-c", "echo Airflow is running! && sleep 3600"]
    - name: init-webserver
      image: docker.io/thescomcontainers/airflow:1.0.0
      command: [
          "sh",
          "-c",
          "airflow list_users || (airflow initdb
          && airflow create_user --role Admin --username airflow --password airflow -e airflow@airflow.com -f airflow -l airflow)",
        ]
