apache-airflow-yamls/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: webserver
    spec:
      serviceAccountName: apache-airflow-scheduler
      containers:
        - env:
            - name: EXECUTOR
              value: CeleryExecutor
            - name: FERNET_KEY
              value: 46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
            - name: LOAD_EX
              value: "n"
            - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: sql_alchemy_conn
            - name: AIRFLOW__CORE__EXECUTOR
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: executor
            - name: AIRFLOW__CELERY__RESULT_BACKEND
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: airflow_web_sql_alchemy_conn
            - name: AIRFLOW__CELERY__BROKER_URL
              valueFrom:
                configMapKeyRef:
                  name: apache-airflow-config
                  key: redis_conn_id
          image: docker.io/thescomcontainers/airflow:2.1.9
          name: webserver
          ports:
            - containerPort: 8080
          resources: {}
status: {}
