apache-airflow-yamls/airflow-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webserver-svc
  namespace: dev-sf-deploy-test
spec:
  type: NodePort
  selector:
    deploy: airflow
    name: apache-airflow
    component: webserver
  ports:
    - name: airflow-ui
      protocol: TCP
      port: 8080
      targetPort: 8080
