apache-airflow-yamls/flower-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flower
  namespace: dev-sf-deploy-test
spec:
  type: NodePort
  selector:
    deploy: flower
    name: flower
    component: flower
  ports:
    - name: flower
      protocol: TCP
      port: 5555
      targetPort: 5555
