apache-airflow-yamls/redis-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis
  namespace: dev-sf-deploy-test
spec:
  type: NodePort
  selector:
    deploy: redis
    name: redis
    component: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
