apache-airflow-yamls/route-flower.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: flower
  namespace: dev-sf-deploy-test
  uid: 79be4da4-991a-4139-b1ae-d111abd74bcd
  resourceVersion: '52319942'
  creationTimestamp: '2023-02-13T22:49:22Z'
  labels:
    app.kubernetes.io/instance: airflow-yamls-test
    io.kompose.service: flower
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-02-13T22:49:22Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app.kubernetes.io/instance': {}
            'f:io.kompose.service': {}
        'f:spec':
          'f:host': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:key': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-02-13T22:49:22Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:tls':
            'f:certificate': {}
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: >-
    ibm-sf-airflow-flower.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
  to:
    kind: Service
    name: flower
    weight: 100
  port:
    targetPort: 5555
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGDjCCBPagAwIBAgISA9nuODmbUp8ILcn1Glfm+VV8MA0GCSqGSIb3DQEBCwUA
[...]
      9uXjfg5lPwyVUEDebczE0n16
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAtOjWP58WZ4BzhKzYOLwr05qMVnCiE+Way5oaCox+IJxozZie
[...]
      9QkfPiIgP92AqS+AwzULOwWBnMbM9sB0+6UX4a3SJKOeMM/NXh44
      -----END RSA PRIVATE KEY-----
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        ibm-sf-airflow-flower.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-02-13T22:49:22Z'
      wildcardPolicy: None
      routerCanonicalHostname: >-
        router-default.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
